<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">Talk To Me</string>
<!--    <string name="app_name">تحدث معي</string>-->

    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="please_wait">ارجوا انتظر</string>

    <string name="stfErrorMessage">لقد حدث خطأ، رجاء أعد المحاولة لاحقا</string>
    <string name="stfOfflineMessage">يرجى التحقق من اتصالك</string>
    <string name="stfEmptyMessage">لا توجد عناصر</string>
    <string name="stfLoadingMessage">تحميل..</string>
    <string name="stfButtonText">أعد المحاولة</string>

    <string name="no_internet">لا يوجد اتصال بالإنترنت</string>
    <string name="empty_data">لا توجد بيانات ، يرجى المحاولة مرة أخرى</string>
    <string name="empty_field">لا يمكن ترك هذا الحقل فارغا</string>
    <string name="invalid_email">يرجى إدخال البريد الإلكتروني الصحيح</string>
    <string name="password_not_match">كلمة المرور غير متطابقة</string>
    <string name="password_less_6_char">يجب ان تكون كلمة المرور 6 احرف او اكبر</string>
    <string name="back_exit">اضغط مرة أخرى للخروج.</string>

    <string name="login_as">تسجيل دخول ك</string>
    <string name="login">تسجيل دخول</string>
    <string name="dont_have_account">لا تملك حساب، </string>
    <string name="register_now">سجل الان</string>
    <string name="register">تسجيل جديد</string>
    <string name="type">النوع</string>

    <string name="vendor">مقدم الخدمة</string>
    <string name="customer">المستفيد</string>

    <string name="id">رقم الهوية</string>
    <string name="name">الاسم</string>
    <string name="specialize">التخصص</string>
    <string name="phone">رقم الجوال</string>
    <string name="email">الايميل</string>
    <string name="birth">تاريخ الميلاد</string>
    <string name="password">كلمة المرور</string>
    <string name="re_password">تاكيد كلمة المرور</string>

    <string name="profile">الملف الشخصي</string>
    <string name="logout">تسجيل خروج</string>
    <string name="setting">الاعدادات</string>
    <string name="about">نبذة عن التطبيق</string>
    <string name="language">اللغة</string>
    <string name="gender">الجنس</string>
    <string name="family">افراد الاسرة</string>
    <string name="age">العمر</string>
    <string name="disability">نوع الاعاقة</string>
    <string name="select_disability">اختر نوع الاعاقة</string>
    <string name="doctor">الطبيب المعالج</string>
    <string name="open_file">فتح ملف</string>

    <string name="medical_awareness">التوعية الطبية</string>
    <string name="gender_doctor">جنس الطبيب المعالج</string>
    <string name="add_family">اضافة فرد اسرة جديد</string>
    <string name="colon">:</string>
    <string name="send_order">ارسال طلب</string>

    <string name="must_add_one_disability">يجب عليك إضافة مرض واحدة على الأقل</string>
    <string name="family_detail">تفاصيل فرد العائلة</string>
    <string name="communication">طريقة التواصل</string>
    <string name="reviews">المراجعين</string>
    <string name="review_request">طلبات المراجعة</string>
    <string name="vital_signs">العلامات الحيوية</string>
    <string name="patient">مريض</string>
    <string name="neww">جديد</string>
    <string name="old">قديم</string>
    <string name="sugar">السكر</string>
    <string name="pressure">الضغط</string>
    <string name="heart">نبض القلب</string>
    <string name="weight">الوزن</string>
    <string name="height">الطول</string>
    <string name="temperature">درجة الحرارة</string>

    <string name="update">تحديث</string>
    <string name="add">اضافة</string>
    <string name="add_treatment_history">اضف ملاحظات الجلسة العلاجية للمريض</string>
    <string name="save">حفظ</string>
    <string name="treatment_history">الجلسات العلاجية للمريض</string>
    <string name="show_treatment_history">مشاهدة تاريخ الجلسات العلاجية للمريض</string>
    <string name="date_treatment_history">تاريخ الجلسات العلاجية للمريض</string>
    <string name="notes">ملاحظات</string>
    <string name="tips">نصائح</string>
    <string name="treatment">العلاج</string>
    <string name="create_data">تاريخ المراجعة</string>

    <string name="request_been_sent">تم ارسال طلب للدكتور مسبقا ، بانتظار الموافقة …</string>
    <string name="appName">اسم التطبيق</string>
    <string name="contact_as">تواصل معنا</string>

</resources>