<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".controller.activities.ChooseLoginActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/content_app_bar_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/login_as"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/vendor"
                    android:layout_width="100dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/shape_vendor"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_vendor"
                        android:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/vendor"
                        android:textSize="14sp"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/customer"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/shape_customer"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_customer"
                        android:tint="@color/white"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_regular"
                        android:text="@string/customer"
                        android:textSize="14sp"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>